# incentive-demo

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: demo.yml
.github/scripts/: extract_address.py
.github/workflows/: demo.yml  issue-opened.yml
contracts/: .env.development.example  Cargo.toml  postinstall.sh
contracts/deployments/demo/: alephzero-testnet.ts  demo.contract  demo.json  demo.wasm
contracts/scripts/: deploy.ts  script.template.ts
contracts/scripts/utils/: initPolkadotJs.ts
contracts/src/demo/: Cargo.toml  errors.rs  lib.rs  types.rs
contracts/src/demo/traits/: types.rs  workflow.rs
frontend/: package.json
frontend/src/components/contributions/: ContributionCard.tsx  ContributionList.tsx
frontend/src/components/home/: HomePageTitle.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/web3/: ChainInfo.tsx  ConnectButton.tsx  ContributionStatus.tsx
frontend/src/deployments/: deployments.ts
frontend/src/pages/: _app.tsx  _document.tsx  check.tsx  index.tsx  issues.tsx
frontend/src/styles/: GlobalStyles.tsx
frontend/src/utils/: constants.ts  notionQueryTable.ts
